samples/_failures_safe/1761563751_f2486d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7fce680.c: In function ‘main’:
./samples/SAFE/__tmp_a7fce680.c:136:5: error: expected declaration or statement at end of input
  136 |     if (!read_size_t("Enter columns for matrix A: ", &cols)) {
      |     ^~
./samples/SAFE/__tmp_a7fce680.c:136:5: error: expected declaration or statement at end of input
